[package]
name = "solny"
version = "0.1.0"
edition = "2021"
# No license yet specified, as I'm slightly unsure what M$'s terms would be here.
# Planned to be MIT/Apache.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse-display = "0.8.0"
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["rand", "v4"] }
